Footer black space bug fixed. Contact page spacing errors fixed; semititle font downsized.

--- a/app/scss/application.scss
+++ b/app/scss/application.scss
@@ -35,9 +35,9 @@
 
 	position: fixed;
 	width: 100%;
-	height: 100px;
+	height: 80px;
 
-	top: 0;
+	bottom: 0;
 	right: 0;
 }
 
