--- a/app/scss/global/_default.scss
+++ b/app/scss/global/_default.scss
@@ -68,6 +68,7 @@ canvas{
 	width: 100%;
 	min-height: 100%;
 	// height: 100%;
+	padding-bottom: 50px;
 
 	&.has-menu{
 		padding-right: 140px;
