--- a/app/scss/views/_contact.scss
+++ b/app/scss/views/_contact.scss
@@ -1,16 +1,22 @@
 #contact-wrapper{
 	background-color: $contact-bg;
+	padding-bottom: 0;
 
 	@include desktop {
 		height: 100%;
 	}
 
 	@include bigdesktop {
-		min-height: 785px;
+		// min-height: 785px;
+		min-height: 680px;
+	}
+
+	@media (min-width: 1441px){
+		min-height: 720px;
 	}
 
 	@include fulldesktop {
-		min-height: 785px;
+		min-height: 780px;
 	}
 
 	& > .inner-wrapper{
@@ -145,7 +151,7 @@
 			position: relative;
 			display: inline-block;
 			width: 100%;
-			height: 100%;
+			height: 101%;
 			@include mobile {
 				order: 1;
 				padding: 0 15px;
@@ -183,6 +189,7 @@
 
 					@include bigdesktop {
 						font-size: 6em;
+						margin-bottom: 10px;
 					}
 				}
 
@@ -212,8 +219,12 @@
 
 						@include desktop {
 							@include flex-grow(2);
-							padding-top: 30px;
-							margin-right: 0;
+							padding-top: 12px;
+							// margin-right: 0;
+						}
+
+						@include bigdesktop {
+							// padding-top: 30px;
 						}
 						
 						.line{
@@ -230,12 +241,13 @@
 						font-weight: 100;
 
 						@include desktop {
-							font-size: 1.5em;
-							@include flex-grow(1);
+							font-size: 1.2em;
+							// font-size: 1.5em;
+							// @include flex-grow(1);
 						}
 
 						@include bigdesktop {
-							font-size: 2.5em;
+							// font-size: 2.5em;
 						}
 					}
 				}
