--- a/app/scss/views/_home.scss
+++ b/app/scss/views/_home.scss
@@ -39,7 +39,7 @@
 
 		#grid-footer{
 			// margin-bottom: 50px;
-			margin-bottom: 58px;
+			// margin-bottom: 58px;
 		}
 	}
 
